# rstm

./: .editorconfig  .envrc  .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  QUICKSTART.md  README.md  SECURITY.md  clippy.toml  default.nix  flake.nix
.archive/actors/: Cargo.toml
.archive/actors/benches/: tmh.rs
.archive/actors/examples/: tmh.rs  tmh_program.json
.archive/actors/src/: error.rs  lib.rs  program.rs
.archive/actors/src/engine/: mod.rs  turing_engine.rs
.archive/actors/src/tmh/: impl_tmh.rs  impl_tmh_ext.rs
.archive/actors/src/traits/: handle.rs
.archive/actors/tests/: tmh.rs
.archive/tape/: Cargo.toml
.archive/tape/src/: error.rs  hash_tape.rs  lib.rs  std_tape.rs
.archive/tape/src/store/: impl_store.rs
.archive/tape/src/traits/: getter.rs  memory.rs  tape.rs
.archive/tape/src/types/: snapshot.rs
.archive/tape/tests/: tape.rs
core/: Cargo.toml
core/src/: error.rs  head.rs  lib.rs  macros.rs  rule.rs  tail.rs
core/src/actors/: actor.rs  base.rs  engine.rs  engine_base.rs  exec.rs  mod.rs  moving_head.rs  tmh.rs  turing_engine.rs
core/src/actors/drivers/: tmh.rs
core/src/actors/engine/: turing_engine.rs
core/src/actors/impls/: impl_deprecated.rs  impl_engine_base.rs  impl_engine_ext.rs  impl_engine_repr.rs  impl_engine_tmh.rs  impl_tmh.rs  impl_tmh_engine.rs  impl_tmh_ext.rs  impl_turing_engine.rs
core/src/actors/traits/: actor.rs  engine.rs  raw_driver.rs  raw_engine.rs
core/src/cmp/: head.rs  tail.rs
core/src/cmp/head/: impl_head.rs  impl_head_ext.rs  impl_head_repr.rs
core/src/cmp/tail/: impl_tail.rs  impl_tail_ext.rs  impl_tail_repr.rs
core/src/head/: impl_deprecated.rs  impl_head.rs  impl_head_ext.rs  impl_head_repr.rs
core/src/macros/: fmt.rs  get.rs  program.rs  rules.rs  states.rs  wrap.rs  wrapper_ops.rs
core/src/mem/: cell.rs  memory.rs  mod.rs  snapshot.rs  store.rs
core/src/mem/tape/: hash_tape.rs  mod.rs  std_tape.rs  tape.rs
core/src/motion/: head_step.rs  mod.rs
core/src/ops/: apply.rs  increment.rs  mod.rs  shift.rs  transform.rs
core/src/program/: instruction_set.rs  mod.rs  program.rs
core/src/programs/: instruction_set.rs  mod.rs  program.rs
core/src/rule/: impl_learned_rule.rs  impl_rule.rs  impl_rule_builder.rs  impl_rule_ext.rs
core/src/rules/: entry.rs  head.rs  instruction.rs  mod.rs  program.rs  rule.rs  rule_map.rs  rule_set.rs  ruleset.rs  tail.rs  workload.rs
core/src/shift/: direction.rs  mod.rs
core/src/state/: error.rs  halt.rs  mod.rs  state.rs  transition.rs
core/src/tail/: impl_deprecated.rs  impl_tail.rs  impl_tail_repr.rs
core/src/tape/: cursor.rs  ds.rs  entry.rs  hash_tape.rs  iter.rs  mod.rs  slider.rs  tape.rs
core/src/traits/: actor.rs  apply.rs  container.rs  convert.rs  cspace.rs  execute.rs  increment.rs  indexing.rs  instruction.rs  io.rs  mod.rs  rulespace.rs  store.rs  symbolic.rs  symbols.rs  transform.rs
core/src/types/: aliases.rs  cell.rs  cursor.rs  direction.rs  head.rs  header.rs  mod.rs  snapshot.rs  tail.rs  transition.rs
core/src/utils/: bounds.rs  range.rs
core/tests/: actor.rs  engine.rs  head2tails.rs  macros.rs  rules.rs  state.rs  tape.rs
core/wit/: types.wit
crates/rstm/: Cargo.toml  lib.rs
crates/rstm/examples/: example.program.json
crates/rstm/tests/: macros.rs
crates/state/: Cargo.toml
crates/state/src/: error.rs  lib.rs  state.rs
crates/state/tests/: state.rs
crates/traits/: Cargo.toml
crates/traits/src/: io.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/ast/: fsm_ast.rs  rule_ast.rs
macros/src/impls/: fsm.rs  rule.rs
rstm/: Cargo.toml  lib.rs
rstm/benches/: default.rs  tmh.rs
rstm/examples/: actor.rs  basic.rs  default.rs  example.program.json  tmh.rs  utm.rs
rstm/src/: error.rs  lib.rs  macros.rs  seal.rs  turing.rs
rstm/src/cspace/: mod.rs
rstm/src/exp/: mod.rs
rstm/src/macros/: program.rs  rulemap.rs  rules.rs  ruleset.rs  state.rs
rstm/src/models/: base.rs  mod.rs  turing.rs
rstm/src/programs/: instruction.rs  program.rs
rstm/src/rules/: instruction.rs  mod.rs  program.rs
rstm/src/sand/: mod.rs
rstm/src/shift/: mod.rs
rstm/src/state/: mod.rs  state.rs
rstm/src/tape/: mod.rs  slider.rs  tape.rs
rstm/src/traits/: fsm.rs  mod.rs  stateful.rs  symbolic.rs
rstm/src/turing/: actor.rs  context.rs  machine.rs  mod.rs  model.rs  state.rs
rstm/src/types/: direction.rs  head.rs  mod.rs  parts.rs  scope.rs  store.rs  symbol.rs  tail.rs  tape.rs
rstm/tests/: actor.rs  actors.rs  busy_beaver.rs  macros.rs  tmh.rs
rules/: Cargo.toml  learned_rule.rs  mod.rs  rule.rs  rule_map.rs  ruleset.rs
rules/ruleset/: impl_instruction_set.rs
rules/src/: learned_rule.rs  lib.rs  program.rs  rule.rs  rule_map.rs  ruleset.rs
rules/src/macros/: rules.rs
rules/src/program/: impl_deprecated.rs  impl_program.rs
rules/src/rule/: impl_learned_rule.rs  impl_rule.rs  impl_rule_builder.rs  impl_rule_ext.rs
rules/src/rule_map/: impl_rule_map.rs
rules/src/ruleset/: impl_deprecated.rs  impl_instruction_set.rs
rules/src/traits/: instruction.rs  program.rs  rules.rs  rulespace.rs  transition.rs
rules/src/types/: aliases.rs  head.rs  tail.rs
rules/tests/: macros.rs
rules/traits/: transition.rs
rules/types/: aliases.rs  tail.rs
rulial/: Cargo.toml
rulial/src/: lib.rs  seal.rs
rulial/src/space/: mod.rs  point.rs
state/: Cargo.toml
state/src/: error.rs  lib.rs  state.rs
state/src/impls/: impl_halt.rs  impl_state.rs  impl_state_deprecated.rs  impl_state_ops.rs  impl_state_repr.rs
state/src/macros/: state.rs
state/src/traits/: convert.rs  halted.rs  halting.rs  raw_state.rs  stated.rs  stateful.rs
state/src/types/: aliases.rs  halt.rs  halter.rs
state/tests/: state.rs
tape/: Cargo.toml
tape/src/: cell.rs  error.rs  hash_tape.rs  lib.rs  moving_tape.rs  std_tape.rs  store.rs  tape_base.rs
tape/src/impls/: impl_tape_base.rs
tape/src/mem/: mod.rs
tape/src/tape/: hash_tape.rs  std_tape.rs
tape/src/traits/: cellular.rs  getter.rs  io.rs  memory.rs  raw_data.rs  tape.rs
tape/src/types/: cell.rs  snapshot.rs
tape/tests/: tape.rs
(+228 files in other folders)
