[workspace]
default-members = ["rstm"]
members = [
  "rstm",
  "core",
  "macros",
  "state",
  "tape",
  "traits", 
]
resolver = "3"

[workspace.package]
authors = [
  "FL03 <joe@pzzld.org>",
  "Scattered-Systems <support@scsys.io>",
]
categories = [
  "mathematics",
  "science",
  "simulation",
]
description = "This crate focuses on building concrete implementations for Turing Machines."
edition = "2024"
homepage = "https://github.com/FL03/rstm/wiki"
keywords = ["turing", "turing-machine", "utm"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/rstm.git"
rust-version = "1.85.0"
version = "0.1.3"

[workspace.dependencies]
# local
rstm = { default-features = false, path = "rstm", version = "0.1.3" }
rstm-core = { default-features = false, path = "core", version = "0.1.3" }
rstm-macros = { default-features = false, path = "macros", version = "0.1.3" }
rstm-state = { default-features = false, path = "state", version = "0.1.3" }
rstm-tape = { default-features = false, path = "tape", version = "0.1.3" }
rstm-traits = { default-features = false, path = "traits", version = "0.1.3" }
# custom
contained = { default-features = false, features = ["macros"], version = "0.2.3" }
rspace-traits = { default-features = false, version = "0.0.9" }
# developmemt
criterion = { version = "0.8" }
# async
tokio = { default-features = false, version = "1" }
async-trait = { default-features = false, version = "0.1" }
# concurrency / parallelism
crossbeam = { default-features = false, version = "0.8" }
rayon = { default-features = false, version = "1" }
# data-structures
bytes = { default-features = false, version = "1" }
hashbrown = { default-features = false, version = "0.16" }
# error-handling
anyhow = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "2" }
# numbers
num-complex = { default-features = false, version = "0.4" }
num-integer = { default-features = false, version = "0.1" }
num-traits = { default-features = false, version = "0.2" }
# random
getrandom = { default-features = false, version = "0.3" }
rand = { default-features = false, version = "0.9" }
rand_distr = { default-features = false, version = "0.5" }
# serialization
serde = { default-features = false, features = ["derive"], version = "1" }
serde_derive = { default-features = false, version = "1" }
serde_json = { default-features = false, version = "1" }
# macros & utilities
lazy_static = { version = "1" }
paste = { version = "1" }
smart-default = { version = "0.7" }
strum = { default-features = false, features = ["derive"], version = "0.27" }
# logging
tracing = { default-features = false, features = ["attributes"], version = "0.1" }
# WebAssembly
wasm-bindgen = { default-features = false, version = "0.2" }

# ************* [Profiles] *************

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = "thin"
opt-level = 2
overflow-checks = true
panic = "abort"
rpath = true
strip = false

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false
panic = "abort"
rpath = false
strip = "debuginfo"
