[package]
build = "build.rs"
description = "this crate implements the core modules of the rstm sdk"
name = "rstm-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
doc = true
doctest = false
test = true

# ********* [Package Metadata] *********
[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

# ********* [Dependencies] *********
[dependencies]
# local
rstm-state = { workspace = true }
# custom
contained = { workspace = true }
variants = { workspace = true }
# error-handling
thiserror = { workspace = true }
# numbers
num = { workspace = true }
num-traits = { workspace = true }
# random
getrandom = { optional = true, workspace = true }
paste = { workspace = true }
rand = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# macros & utilities
smart-default = { workspace = true }
strum = { workspace = true }
# logging
tracing = { optional = true, workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
tracing-subscriber = { features = ["std"], workspace = true }

[features]
default = [
  "std",
]

full = [
  "default",
  "json",
  "rand",
  "serde",
  "tracing",
]

# ********* [FF] Features *********
json = [ 
  "alloc", 
  "rstm-state/json",
  "serde",
  "serde_json",
]

nightly = [
  "rstm-state/nightly",
]

# ************* [FF:Environments] *************

std = [
  "alloc",
  "contained/std",
  "variants/std",
  "rstm-state/std",
  "rand?/std",
  "rand?/std_rng",
  "serde?/std",
  "serde_json?/std",
  "strum/std",
  "thiserror/std",
  "tracing?/std",
]

wasi = [
  "alloc",
  "rstm-state/wasi",
]

wasm = [
  "alloc",
  "getrandom?/wasm_js",
  "wasm_bindgen",
  "rstm-state/wasm",
]

# ********* [FF] Dependencies *********
alloc = [
  "contained/alloc",
  "variants/alloc",
  "num/alloc",
  "rstm-state/alloc",
  "serde?/alloc",
]

rand = [
  "dep:rand",
  "dep:rand_distr",
  "num/rand",
  "rng",
]

rng = [ 
  "dep:getrandom", 
  "rand?/small_rng", 
  "rand?/thread_rng",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "num/serde",
  "rstm-state/serde",
]

serde_json = ["dep:serde_json"]

tracing = [
  "dep:tracing",
  "tracing?/attributes",
]

wasm_bindgen = ["dep:wasm-bindgen"]


# ************* [Unit Tests] *************
[[test]]
name = "default"

[[test]]
name = "tape"
required-features = ["alloc"]
