[package]
build = "build.rs"
description = "this crate implements the core modules of the rstm sdk"
name = "rstm-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
doc = true
doctest = false
test = true

# ************* [Unit Tests] *************
[[test]]
name = "default"

# ********* [Package Metadata] *********
[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

# ********* [Dependencies] *********
[dependencies]
# local
rstm-state = { workspace = true }
# custom
contained = { workspace = true }
variants = { workspace = true }
# error-handling
thiserror = { workspace = true }
# numbers
num-traits = { workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# macros & utilities
paste = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
tracing-subscriber = { features = ["std"], workspace = true }

[features]
default = [
  "std",
]

full = [
  "default",
  "json",
  "serde",
]

# ********* [FF] Features *********
json = [ 
  "alloc", 
  "rstm-state/json",
  "serde",
  "serde_json",
]

nightly = [
  "rstm-state/nightly",
]

# ************* [FF:Environments] *************

std = [
  "alloc",
  "rstm-state/std",
  "contained/std",
  "variants/std",
  "serde?/std",
  "serde_json?/std",
  "strum/std",
  "thiserror/std",
]

wasi = [
  "alloc",
  "rstm-state/wasi",
]

wasm = [
  "alloc",
  "wasm-bindgen",
  "rstm-state/wasm",
]

# ********* [FF] Dependencies *********
alloc = [
  "contained/alloc",
  "variants/alloc",
  "rstm-state/alloc",
  "serde?/alloc",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "rstm-state/serde",
]

serde_json = ["dep:serde_json"]

wasm-bindgen = ["dep:wasm-bindgen"]
