[package]
build = "build.rs"
name = "rstm-core"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[package.metadata.component]
package = "rstm:core"

[package.metadata.component.dependencies]

[lib]
bench = false

[[test]]
name = "macros"
required-features = ["macros"]

[dependencies]
rstm-state = { workspace = true }
rstm-traits = { workspace = true }
# custom
rspace-traits = { workspace = true }
# concurrency / parallelism
rayon = { optional = true, workspace = true }
# data structures
bytes = { optional = true, workspace = true }
hashbrown = { optional = true, workspace = true }
# error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# math
num-complex = { optional = true, workspace = true }
num-traits = { workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# logging
tracing = { optional = true, workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }
# utilities
contained = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }

[features]
default = ["macros", "std"]

full = [
  "default",
  "bytes",
  "complex",
  "hashbrown",
  "json",
  "rand",
  "serde",
  "tracing",
]

macros = [
  "rstm-state/macros",
]

nightly = [
  "rstm-state/nightly",
  "rstm-traits/nightly",
  "rspace-traits/nightly",
]

json = [
  "alloc",
  "serde",
  "serde_json",
  "rstm-state/json",
]

# ********* [FF] Environments *********

std = [
  "alloc",
  "anyhow/std",
  "contained/std",
  "rstm-state/std",
  "rstm-traits/std",
  "rspace-traits/std",
  "serde?/std",
  "serde_json?/std",
  "strum/std",
  "thiserror/std",
  "tracing?/std",
]

wasi = [
  "rstm-state/wasi",
  "rstm-traits/wasi",
  "rspace-traits/wasi",
]

wasm = [
  "wasm_bindgen",
  "rstm-state/wasm",
  "rstm-traits/wasm",
  "rspace-traits/wasm",
]

# ********* [FF] Dependencies *********

alloc = [
  "contained/alloc",
  "rstm-state/alloc",
  "rstm-traits/alloc",
  "rspace-traits/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
]

bytes = [
  "dep:bytes",
  "rstm-state/bytes",
  "rstm-traits/bytes",
]

hashbrown = [
  "dep:hashbrown",
  "rstm-state/hashbrown",
  "rstm-traits/hashbrown",
  "rspace-traits/hashbrown",
]

complex = [
  "dep:num-complex",
  "rstm-state/complex",
  "rstm-traits/complex",
  "rspace-traits/complex",
]

rand = [
  "rstm-state/rand",
  "rstm-traits/rand",
  "rspace-traits/rand",
]

rayon = [
  "dep:rayon",
  "hashbrown?/rayon",
  "rstm-state/rayon",
  "rstm-traits/rayon",
]

rng = [
  "rstm-state/rng",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "bytes?/serde",
  "hashbrown?/serde",
  "rstm-state/serde",
  "rstm-traits/serde",
  "rspace-traits/serde",
]

serde_json = [
  "dep:serde_json",
]

tracing = [
  "dep:tracing",
]

wasm_bindgen = [
  "dep:wasm-bindgen",
  "rstm-state/wasm_bindgen",
  "rstm-traits/wasm_bindgen",
  "rspace-traits/wasm_bindgen",
]
