[package]
build = "build.rs"
name = "rstm"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doc = true
doctest = false
test = true

# ********* [Package Metadata] *********
[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

# ********* [Dependencies] *********
[dependencies]
rstm-actors = { optional = true, workspace = true }
rstm-core = { workspace = true }
rstm-rules = { optional = true, workspace = true }

[dev-dependencies]
anyhow = { features = ["std"], workspace = true }
criterion = { features = ["plotters"], version = "0.7" }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["json", "serde"], workspace = true }

[features]
default = [
  "actors",
  "macros",
  "rules",
  "std",
]

full = [
  "default", 
  "rand", 
  "serde", 
  "tracing"
]

# ********* [FF] Features *********
actors = [
  "alloc",
  "rules",
  "dep:rstm-actors",
]

macros = []

rules = [
  "dep:rstm-rules",
]

nightly = [
  "rstm-actors?/nightly",
  "rstm-core/nightly",
]

json = [
  "alloc",
  "rstm-core/json",
]

# ********* [FF] Environments *********
std = [
  "alloc", 
  "rstm-actors?/std",
  "rstm-core/std",
  "rstm-rules?/std",
]

wasi = [
  "alloc",
  "rstm-actors?/wasi",
  "rstm-core/wasi",
  "rstm-rules?/wasi",
]

wasm = [
  "alloc",
  "rstm-actors?/wasm",
  "rstm-core/wasm",
  "rstm-rules?/wasm",
]

# ************* [FF:Dependencies] *************

alloc = [
  "rstm-actors?/alloc",
  "rstm-core/alloc",
  "rstm-rules?/alloc",
]

rand = [
  "rstm-core/rand",
]

rng = [
  "rstm-core/rng",
]

serde = [
  "rstm-actors?/serde",
  "rstm-core/serde",
  "rstm-rules?/serde",
]

serde_json = [
  "rstm-core/serde_json",
  "rstm-rules?/serde_json",
]

tracing = [
  "rstm-actors?/tracing",
  "rstm-core/tracing",
]

wasm_bindgen = [
  "rstm-actors?/wasm_bindgen",
  "rstm-core/wasm_bindgen",
  "rstm-rules?/wasm_bindgen",
]

# ************* [Benchmarks] *************
[[bench]]
harness = false
name = "default"
required-features = ["std"]

# ************* [Examples] *************
[[example]]
name = "actor"
required-features = ["alloc", "tracing"]

# ************* [Unit Tests] *************
[[test]]
name = "default"

[[test]]
name = "busy_beaver"
required-features = ["alloc", "actors", "macros"]

[[test]]
name = "macros"
required-features = ["macros", "rules"]
