[package]
build = "build.rs"
name = "rstm"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doc = true
doctest = false
test = true

# ************* [benchmarks] *************
[[bench]]
harness = false
name = "tmh"
required-features = ["full"]

# ************* [examples] *************
[[example]]
name = "tmh"
required-features = ["full"]

# ************* [Unit Tests] *************
[[test]]
name = "default"

[[test]]
name = "macros"
required-features = ["macros"]

[[test]]
name = "tmh"
required-features = ["alloc", "actors", "macros", "programs"]


# ********* [Package Metadata] *********
[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

# ********* [Dependencies] *********
[dependencies]
rstm-actors = { optional = true, workspace = true }
rstm-core = { workspace = true }
rstm-programs = { optional = true, workspace = true }
rstm-tape = { optional = true, workspace = true }

[dev-dependencies]
anyhow = { features = ["std"], workspace = true }
criterion = { features = ["plotters"], version = "0.7" }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["json", "serde"], workspace = true }

[features]
default = [
  "actors",
  "macros",
  "programs",
  "std",
  "tape",
]

full = [
  "default", 
  "json",
  "serde", 
  "tracing"
]

# ********* [FF] Features *********
actors = [
  "alloc",
  "programs",
  "tape",
  "dep:rstm-actors",
]

macros = []

programs = ["dep:rstm-programs"]

tape = [
  "alloc",
  "dep:rstm-tape",
]

nightly = [
  "rstm-actors?/nightly",
  "rstm-core/nightly",
  "rstm-programs?/nightly",
  "rstm-tape?/nightly"
]

json = [
  "alloc",
  "rstm-core/json",
  "rstm-programs?/json",
]

# ********* [FF] Environments *********
std = [
  "alloc", 
  "rstm-actors?/std",
  "rstm-core/std",
  "rstm-programs?/std",
  "rstm-tape?/std",
]

wasi = [
  "alloc",
  "rstm-actors?/wasi",
  "rstm-core/wasi",
  "rstm-programs?/wasi",
  "rstm-tape?/wasi",
]

wasm = [
  "alloc",
  "wasm-bindgen",
  "rstm-actors?/wasm",
  "rstm-core/wasm",
  "rstm-programs?/wasm",
  "rstm-tape?/wasm",
]

# ************* [FF:Dependencies] *************

alloc = [
  "rstm-actors?/alloc",
  "rstm-core/alloc",
  "rstm-programs?/alloc",
  "rstm-tape?/alloc",
]

serde = [
  "rstm-actors?/serde",
  "rstm-core/serde",
  "rstm-programs?/serde",
  "rstm-tape?/serde"
]

serde_json = [
  "rstm-core/serde_json",
  "rstm-programs?/serde_json",
]

tracing = [
  "rstm-actors?/tracing",
  "rstm-tape?/tracing"
]

wasm-bindgen = [
  "rstm-actors?/wasm-bindgen",
  "rstm-core/wasm-bindgen",
  "rstm-programs?/wasm-bindgen",
  "rstm-tape?/wasm-bindgen"
]
